minor fix Hero text align center

--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ nav .nav-menu a:hover{
 #welcome-section .welcome-text{
     font-family: 'Playfair Display', serif;
     position: relative;
-    top: 30vh;
+    top: 45vh;
 }
 
 #welcome-section h1{
